table alignment in edit mode fixed

--- a/angular-frontend/src/app/donors/donors.component.css
+++ b/angular-frontend/src/app/donors/donors.component.css
@@ -113,13 +113,13 @@ table th {
 
 .donor-table td:nth-child(1) {
   /* width: 10px; ID */
-  max-width: 1px;
+  max-width: 2px;
   text-align: center;
 }
 .donor-table th:nth-child(1) {
   text-align: center;
   justify-content: center;
-  max-width: 1px;
+  max-width: 5px;
   text-align: center;
   align-items: center;
 }
@@ -213,9 +213,9 @@ table td:nth-child(6) {
 
 table td:nth-child(7)
 {
-   text-align: start;
-  min-width: 20px;
-  max-width: 20px;
+  /* text-align: start; */
+  align-items: center;
+  justify-content: center;
   
 }
 
@@ -532,3 +532,79 @@ table td:nth-child(7)
 .search-button:hover {
   background-color: #a31414;
 }
+
+
+.donor-edit-table
+{
+   width: 100%;
+  border-collapse: collapse;
+  box-shadow: 0 4px 10px rgba(211, 47, 47, 0.2);
+  background: white;
+  border-radius: 8px;
+  word-wrap: break-word;
+  word-break: break-word;
+  overflow: hidden;
+}
+
+
+thead {
+  background-color: #d32f2f;
+  color: white;
+  text-transform: uppercase;
+}
+
+th,
+td {
+ padding: 8px 15px;
+  text-align: left;
+  border-bottom: 1px solid #f2cccc;
+  border: 1px solid #ccc;
+}
+
+tbody tr:hover {
+  background-color: #fdecec;
+}
+
+
+.primary-btn
+ {
+  background-color: #d32f2f;
+  color: white;
+  padding: 10px 18px;
+  border: none;
+  border-radius: 6px;
+  font-weight: 600;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.secondary-btn
+{
+  
+  padding: 10px 18px;
+  border: none;
+  border-radius: 6px;
+  font-weight: 600;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+  /*  */
+  background-color: #eee;
+  color: #333;
+}
+
+.primary-btn:hover,
+.secondary-btn:hover {
+  background-color: #b71c1c;
+}
+
+
+
+.donor-edit-table th,
+.donor-edit-table td {
+ padding: 8px 15px;
+  text-align: left;
+  border-bottom: 1px solid #f2cccc;
+  border: 1px solid #ccc;
+}
+
+
